JavaScript Almost Finish
Finish the Brain of the TO DO LIST

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
+    <link rel="stylesheet" href="style/css_style.css">
 </head>
 <body>
     <div id="container">
@@ -12,6 +13,6 @@
         <button id="addtodo">Add</button>
         <div id="nothing"></div>
     </div>
-    
+<script src="functionality/functionality.js"></script>
 </body>
 </html>
