--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
     <link rel="stylesheet" href="style/css_style.css">
+    <link rel="shortcut icon" href="" type="image/x-icon">
 </head>
 <body>
-    <div id="container">
-        <input type="text" id="input">
-        <button id="addtodo">Add</button>
-        <div id="nothing"></div>
+    <div id="container"
+     class="container">
+     <h1>TO DO LIST</h1>
+        <input type="text" id="input2" class="input2" placeholder="add something here">
+        <button id="addtodo" class="addtodo">Add</button>
+        <!--   <div id="nothing" class="nothing"></div> -->
+        <ol id="nothing" class="nothing">
+            <li>Go to the supermarket</li>
+        </ol>
     </div>
 <script src="functionality/functionality.js"></script>
 </body>
