--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <input type="text" id="input2" class="input2" placeholder="add something here">
         <button id="addtodo" class="addtodo">Add</button>
         <!--   <div id="nothing" class="nothing"></div> -->
+        <p class="rules">Rules: <br> Just One Click check the list <br> Two Clicks Remove the List</p>
         <ol id="nothing" class="nothing">
-            <li>Go to the supermarket</li>
+            
         </ol>
     </div>
 <script src="functionality/functionality.js"></script>
