--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <link rel="shortcut icon" href="icons/to-do-list.png" type="image/x-icon">
 </head>
 <body>
-    <div id="container"
-     class="container">
-     <h1>TO DO LIST</h1>
+    <div id="container" class="container">
+
+     <h1><abbr title="Lista de Afazeres">TO DO LIST</abbr></h1>
+
         <input type="text" id="input2" class="input2" placeholder="add something here">
+
         <button id="addtodo" class="addtodo">Add</button>
-        <!--   <div id="nothing" class="nothing"></div> -->
-        <p class="rules">Rules: <br> Just One Click check the list <br> Two Clicks Remove the List</p>
-        <ol id="nothing" class="nothing">
-            
-        </ol>
+        
+        <p class="rules">Rules <br> Just One Click, check the List <br> Two Clicks, Remove the List</p>
+
+        <ol id="nothing" class="nothing"></ol>
+
     </div>
 <script src="functionality/functionality.js"></script>
 </body>
